<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="1024dp"
    android:layout_height="676dp"
    android:orientation="horizontal"
    tools:context=".pages.EnvironmentFragment">

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="420dp"
        android:layout_height="160dp"
        android:text="@string/configButton"
        app:backgroundTint="@null"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:textSize="42sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWebSocket"
        android:layout_width="420dp"
        android:layout_height="160dp"
        android:text="@string/webSocketButton"
        app:backgroundTint="@null"
        android:layout_marginEnd="20dp"
        android:textSize="42sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        app:layout_constraintLeft_toRightOf="@id/btnConfig"
        app:layout_constraintTop_toTopOf="@id/btnConfig"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnControl"
        android:layout_width="420dp"
        android:layout_height="160dp"
        android:text="@string/controlButton"
        android:textSize="42sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="@id/btnConfig"
        app:layout_constraintTop_toBottomOf="@id/btnConfig"
        app:layout_constraintBottom_toTopOf="@id/btnUi"/>

    <Button
        android:id="@+id/btnLoadTest"
        android:layout_width="420dp"
        android:layout_height="160dp"
        android:text="@string/loadTest"
        android:textSize="42sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="@id/btnWebSocket"
        app:layout_constraintTop_toTopOf="@id/btnControl" />

    <Button
        android:id="@+id/btnUi"
        android:layout_width="420dp"
        android:layout_height="160dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        android:text="@string/uiButton"
        android:textColor="@color/primary"
        android:textSize="42sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/btnControl" />

    <Button
        android:id="@+id/btnMember"
        android:layout_width="205dp"
        android:layout_height="160dp"
        android:text="@string/userInfoButton"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded_left"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="@id/btnLoadTest"
        app:layout_constraintTop_toTopOf="@id/btnUi" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="205dp"
        android:layout_height="160dp"
        android:text="@string/exitButton"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded_right"
        app:backgroundTint="@null"
        app:layout_constraintRight_toRightOf="@id/btnLoadTest"
        app:layout_constraintTop_toTopOf="@id/btnUi" />


</androidx.constraintlayout.widget.ConstraintLayout>