<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="512dp"
    android:layout_height="652dp"
    tools:context=".pages.AuthSelectFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/layer_list_rect" />

    <TextView
        android:id="@+id/textViewAuthSelectMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/authSelectMessage"
        android:textSize="36sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- member info -->
    <View
        android:id="@+id/viewMember"
        android:layout_width="450dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layer_list_rect_corner"
        app:layout_constraintTop_toBottomOf="@id/textViewAuthSelectMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/memberMessage"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/viewMember"
        app:layout_constraintStart_toEndOf="@id/imageViewMember" />

    <ImageView
        android:id="@+id/imageViewMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/member"
        app:layout_constraintTop_toTopOf="@id/viewMember"
        app:layout_constraintStart_toStartOf="@id/viewMember"
        app:layout_constraintBottom_toBottomOf="@id/viewMember"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textViewMemberContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="start"
        android:text="@string/memberInfoMessage"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/textViewMember"
        app:layout_constraintTop_toBottomOf="@id/textViewMember" />

    <TextView
        android:id="@+id/textViewMemberUnitInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="충전단가: 310원"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/textViewMember"
        app:layout_constraintTop_toTopOf="@id/textViewMember"
        app:layout_constraintBottom_toBottomOf="@id/textViewMember" />

    <!-- nomember info -->
    <View
        android:id="@+id/viewNoMember"
        android:layout_width="450dp"
        android:layout_height="160dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layer_list_rect_corner"
        app:layout_constraintTop_toBottomOf="@id/viewMember"
        app:layout_constraintStart_toStartOf="@id/viewMember"
        app:layout_constraintEnd_toEndOf="@id/viewMember"
        app:layout_constraintBottom_toTopOf="@id/viewQr"/>

    <TextView
        android:id="@+id/textViewNoMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/nomemberMessage"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/viewNoMember"
        app:layout_constraintStart_toEndOf="@id/imageViewNoMember" />

    <ImageView
        android:id="@+id/imageViewNoMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/nomember"
        app:layout_constraintTop_toTopOf="@id/viewNoMember"
        app:layout_constraintStart_toStartOf="@id/viewNoMember"
        app:layout_constraintBottom_toBottomOf="@id/viewNoMember"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textViewNoMemberContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="start"
        android:text="@string/nomemberInfoMessage"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/textViewNoMember"
        app:layout_constraintTop_toBottomOf="@id/textViewNoMember" />

    <TextView
        android:id="@+id/textViewNoMemberUnitInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="충전단가: 480원"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/textViewNoMember"
        app:layout_constraintTop_toTopOf="@id/textViewNoMember"
        app:layout_constraintBottom_toBottomOf="@id/textViewNoMember" />

    <!-- qr -->
    <View
        android:id="@+id/viewQr"
        android:layout_width="450dp"
        android:layout_height="160dp"
        android:layout_marginBottom="26dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layer_list_rect_corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewQr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/qrMessage"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/viewQr"
        app:layout_constraintStart_toEndOf="@id/imageViewQr" />

    <ImageView
        android:id="@+id/imageViewQr"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/qr"
        app:layout_constraintTop_toTopOf="@id/viewQr"
        app:layout_constraintStart_toStartOf="@id/viewQr"
        app:layout_constraintBottom_toBottomOf="@id/viewQr"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textViewQrContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="start"
        android:text="@string/qrInfoMessage"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/textViewQr"
        app:layout_constraintTop_toBottomOf="@id/textViewQr" />

</androidx.constraintlayout.widget.ConstraintLayout>