<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="512dp"
    android:layout_height="652dp"
    tools:context=".pages.InitFragment">

    <View
        android:id="@+id/viewCircle"
        android:layout_width="460dp"
        android:layout_height="460dp"
        android:background="@drawable/layer_list_oval_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/imageViewCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/car_blue"
        app:layout_constraintTop_toTopOf="@id/viewCircle"
        app:layout_constraintStart_toStartOf="@id/viewCircle"
        app:layout_constraintEnd_toEndOf="@id/viewCircle"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textViewConnector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/leftConnector"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/imageViewCar"
        app:layout_constraintStart_toStartOf="@id/imageViewCar"
        app:layout_constraintEnd_toEndOf="@id/imageViewCar" />

    <TextView
        android:id="@+id/textViewInitMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/initMessage"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/textViewConnector"
        app:layout_constraintStart_toStartOf="@id/textViewConnector"
        app:layout_constraintEnd_toEndOf="@id/textViewConnector" />

    <TextView
        android:id="@+id/txtMemberUnitInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/memChargingUnit"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/textViewInitMessage"
        app:layout_constraintTop_toBottomOf="@id/textViewInitMessage"
        app:layout_constraintEnd_toEndOf="@id/textViewInitMessage"/>

</androidx.constraintlayout.widget.ConstraintLayout>