<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="512dp"
    android:layout_height="652dp"
    tools:context=".pages.CreditCardWaitFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/layer_list_rect" />


    <TextView
        android:id="@+id/textViewCreditCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/creditCardTaggingMessage"
        android:textSize="36sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewCreditCardSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/creditCardTaggingSubMessage"
        android:textSize="20sp"
        android:textColor="@color/black_500"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="56dp"
        android:text="@string/preAmtMessage"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textViewCreditCard"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="SpeakableTextPresentCheck"/>
    
    <TextView
        android:id="@+id/txtInputAmt"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="right|center"
        android:text="0"
        android:textSize="32sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/txtPay"
        app:layout_constraintTop_toTopOf="@id/txtPay"
        app:layout_constraintBottom_toBottomOf="@id/txtPay"
        tools:ignore="RtlHardcoded,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/won"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/payUnitMessage"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/txtInputAmt"
        app:layout_constraintBottom_toBottomOf="@id/txtInputAmt"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="400dp"
        android:layout_height="4dp"
        android:layout_marginTop="5dp"
        android:layout_centerInParent="true"
        android:background="@color/primary"
        app:layout_constraintLeft_toLeftOf="@id/txtPay"
        app:layout_constraintTop_toBottomOf="@id/txtPay"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageViewCreditCardBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_to_reader_background"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="contentDescription" />

    <ImageView
        android:id="@+id/imgCreditCardTagging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:background="@drawable/creditcardtagging"
        app:layout_constraintTop_toTopOf="@id/imageViewCreditCardBackground"
        app:layout_constraintStart_toStartOf="@id/imageViewCreditCardBackground"
        app:layout_constraintEnd_toEndOf="@id/imageViewCreditCardBackground"
        app:layout_constraintBottom_toBottomOf="@id/imageViewCreditCardBackground"
        tools:ignore="contentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>