<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="1024dp"
    android:layout_height="696dp"
    android:orientation="horizontal"
    tools:context=".pages.AdminPasswordFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="460dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:background="@null"
        android:textSize="54sp"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextViewEdits" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="500dp"
        android:layout_height="4dp"
        android:layout_centerInParent="true"
        android:background="#224E98"
        android:layout_marginTop="5dp"
        android:layout_marginStart="-20dp"
        app:layout_constraintLeft_toLeftOf="@id/editPassword"
        app:layout_constraintTop_toBottomOf="@id/editPassword" />

    <ImageView
        android:id="@+id/imgAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/img_admin"
        android:layout_marginTop="25dp"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtAdminTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:text="@string/adminTitle"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@id/imgAdmin"
        app:layout_constraintTop_toBottomOf="@id/editPassword" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="250dp"
        android:layout_height="110dp"
        android:text="@string/btn_Cancel"
        app:backgroundTint="@null"
        android:textSize="46sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_white_button"
        app:layout_constraintStart_toStartOf="@id/txtAdminTitle"
        app:layout_constraintTop_toBottomOf="@id/txtAdminTitle" />


    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="250dp"
        android:layout_height="110dp"
        android:layout_marginStart="100dp"
        android:text="@string/btn_confirm"
        android:textColor="@color/white"
        android:textSize="46sp"
        app:backgroundTint="@null"
        android:background="@drawable/rounded_blue_button"
        app:layout_constraintEnd_toEndOf="@id/txtAdminTitle"
        app:layout_constraintTop_toTopOf="@id/btnCancel" />


</androidx.constraintlayout.widget.ConstraintLayout>